tests/invalid/runtime/json_encode_nan.pts
import JSON;

function main() : void {
    float x = 0.0 / 0.0;
    JSON.encode(x);
}
